--- a/views/common/navbar.html
+++ b/views/common/navbar.html
@@ -26,7 +26,7 @@
             <li class="divider"></li>
 
             <li>
-              <a href="/top/login"><i class="icon-off"></i>&nbsp;Logout</a>
+              <a href="/simplelogout" id="_logout"><i class="icon-off"></i>&nbsp;Logout</a>
             </li>
           </ul>
         </li>
