--- a/views/common/navbar.html
+++ b/views/common/navbar.html
@@ -3,9 +3,9 @@
 <input type="hidden" id="timezone" name="timezone" value="<%= user.timezone %>" />
 
 <script type='text/javascript'>
-//  var i18n = "<%= i18n %>";
-//  i18n = i18n.replace(/'/g,"\"");
-//  i18n = JSON.parse(i18n);
+  var i18n = "<%= i18n %>";
+  i18n = i18n.replace(/'/g,"\"");
+  i18n = JSON.parse(i18n);
 </script>
 
 <div class="navbar">
