修改close按钮显示文字

--- a/views/content_layout.html
+++ b/views/content_layout.html
@@ -172,7 +172,7 @@
             <div class="modal-body" id="slide">
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-warning" data-dismiss="modal"><%= i('html.button.common.close') %><!--クローズ -->クローズ</button>
+                <button type="button" class="btn btn-warning" data-dismiss="modal"><%= i('html.button.common.close') %></button>
             </div>
         </div><!-- /.modal-content -->
     </div><!-- /.modal-dialog -->
