横屏空白区域调整

--- a/views/content_layout_add.html
+++ b/views/content_layout_add.html
@@ -327,7 +327,7 @@
         <div style="width:665px;height:478px;margin-left: 200px;margin-top: 30px;margin-bottom: 30px">
           <div style="border:1px solid #000000;padding:50px 5px 50px 50px;border-radius: 15px;">
             <div class="row">
-            <div class="col-lg-11 pull-left" style="overflow-y:auto;height:380px;">
+            <div class="col-lg-11 pull-left" style="overflow-y:auto;height:380px;margin-top: 15px">
               <ul id="layoutLandscape" class="ace-thumbnails">
               </ul>
             </div>
