--- a/public/stylesheets/contents.less
+++ b/public/stylesheets/contents.less
@@ -38,6 +38,7 @@
   margin: 1px 1px 1px 1px;
   overflow-x: hidden;
   overflow-y: hidden;
+  cursor: pointer;
 }
 
 .thumb_block_img {
@@ -91,7 +92,8 @@
   width: 100px;
   height: 100px;
   float: left;
-  margin: 2px
+  margin: 2px;
+  cursor: pointer;
 }
 
 .modalfix_checkbox {
@@ -242,6 +244,7 @@
   height: 150px;
 }
 .cover_add {
+  cursor: pointer;
 
 }
 
@@ -253,6 +256,7 @@
   float: left;
   overflow-x: hidden;
   margin: 1px 1px 1px 1px;
+  cursor: pointer;
 }
 
 .cover_block_img {
@@ -410,6 +414,9 @@ div:hover>.tools.tools-right {
   padding-left: 0px;
   margin: 0 0 0px 0;
 }
+#taglist li {
+  cursor: pointer;
+}
 
 #_action_type_jump {
   margin-left: 133px;
@@ -417,4 +424,85 @@ div:hover>.tools.tools-right {
 #page1 {
   height: 400px;
   overflow-y: scroll;
+}
+
+.bottom_panel {
+
+  width: 100%;
+  overflow-x: scroll;
+  overflow-y: hidden;
+  height: 160px;
+  white-space: nowrap
+
+}
+
+.bottom_panel .thumb {
+  border: 1px solid #555555;
+  width: 156px;
+  height: 156px;
+  background-image: url("/images/block.png");
+  float: left;
+  margin: 2px;
+  padding: 2px;
+}
+
+.bottom_panel .content {
+  border: 1px solid #555555;
+  width: 886px;
+  margin: 2px;
+  padding: 2px;
+  height: 156px;
+  float: left;
+}
+
+.material_popup {
+  height: 330px;
+  overflow-y: scroll;
+  overflow-x: hidden;
+  width: 100%;
+}
+
+.material_thumb {
+  margin: 3px;
+  width: 100px;
+  height: 100px;
+  float: left;
+  background: #e3e3e3;
+}
+
+.widget {
+  cursor: pointer;
+}
+
+.widget_border {
+  position: absolute;
+  left: 0px;
+  top: 0px;
+  width: 100%;
+  height: 100%;
+}
+
+.widget_border_normal {
+  border: 0px solid red;
+}
+
+.widget_border_selected {
+  border: 2px solid green;
+}
+
+.widget_border_hover {
+  border: 2px solid blue;
+}
+
+#pickThumb a img {
+  height: 150px;
+  border: solid 1px #e5e5e5;
+}
+
+#pickThumb a img {
+  height: 150px;
+  border: solid 1px #e5e5e5;
+}
+.col-lg-8 {
+  width: 1048px;
 }
