--- a/views/content_material.html
+++ b/views/content_material.html
@@ -49,8 +49,8 @@
           <div class="pull-right" style="width: 300px">
             <form class="search-form">
               <div class="input-group">
-                <input type="text" placeholder="<%= i('html.label.common.search') %>" class="form-control"  autocomplete="off" />
-                <span class="input-group-addon">
+                <input id="txt_search" type="text" placeholder="<%= i('html.label.common.search') %>" class="form-control"  autocomplete="off" />
+                <span id="doSearch" class="input-group-addon">
                   <i class="icon-search"></i>
                 </span>
               </div>
