--- a/views/content_layout_add.html
+++ b/views/content_layout_add.html
@@ -276,7 +276,7 @@
             <i class="icon-chevron-right arrow-icon"></i>
           </span>
         </li>
-        <li class="active"><%= i('html.label.layout.new') %><!-- 新規レイアウト--></li>
+        <li class="active"><%= title %><!-- 新規レイアウト--></li>
       </ul>
       <!--.breadcrumb-->
     </div>
