搜索机能  素材 元素 布局 通知

--- a/views/content_synthetic_add.html
+++ b/views/content_synthetic_add.html
@@ -251,6 +251,8 @@
                     <option value="zoomOut">zoomOut</option>
                     <option value="moveRightUp">moveRightUp</option>
                     <option value="up">up</option>
+                    <option value="moveLeftDown">moveLeftDown</option>
+                    <option value="zoomAndMoveRightUp">zoomAndMoveRightUp</option>
                   </select>
                 </div>
               </div>
