--- a/views/admin_company_list.html
+++ b/views/admin_company_list.html
@@ -38,11 +38,11 @@
           <a href="/admin/company/add" class="btn btn-default"><i class="icon-plus"></i><%= i('html.button.company.add') %><!--顧客追加 --></a>
         </div>
         <div class="pull-right" style="width: 300px">
-          <form class="search-form">
+          <form class="search-form" onsubmit="return false;">
             <div class="input-group">
-              <input type="text" placeholder="<%= i('html.label.common.search') %>" class="form-control"  autocomplete="off" />
+              <input id = "company_search" type="text" placeholder="<%= i('html.label.common.search') %>" class="form-control"  autocomplete="off" />
               <span class="input-group-addon">
-                <i class="icon-search"></i>
+                <i id = "doSearchCompany"class="icon-search"></i>
               </span>
             </div>
           </form>
