--- a/views/customer_group_list.html
+++ b/views/customer_group_list.html
@@ -37,10 +37,10 @@
             <a href="/customer/group/add" class="btn btn-default" id="groupAdd"><i class="icon-plus"></i><%= i('html.button.group.add') %><!-- グループ追加--></a>
         </div>
         <div class="pull-right" style="width: 300px">
-          <form class="search-form">
+          <form class="search-form" onsubmit="return false;">
             <div class="input-group">
-              <input type="text" placeholder="<%= i('html.label.common.search') %>" class="form-control"  autocomplete="off" />
-              <span class="input-group-addon">
+              <input id = "group_search"type="text" placeholder="<%= i('html.label.common.search') %>" class="form-control"  autocomplete="off" />
+              <span id="doSearchGroup" class="input-group-addon">
                 <i class="icon-search"></i>
               </span>
             </div>
