app图片设定画面追加

--- a/views/common/sidebar.html
+++ b/views/common/sidebar.html
@@ -3,33 +3,33 @@
     <% if (user.type == 3 || user.type == 0) {%>
     <li>
       <a href="/content/layout">
-        <span class="menu-text"><%= i('common.sidebar.content') %></span>
+        <span class="menu-text"><%= i('html.label.sidebar.content') %></span>
       </a>
       <ul class="submenu" style="display: block;">
         <li>
           <a href="/content/material" class="dropdown-toggle">
-            <i class="icon-picture"></i>&nbsp;<%= i('common.sidebar.content.material') %>
+            <i class="icon-picture"></i>&nbsp;<%= i('html.label.sidebar.content.material') %>
           </a>
         </li>
         <li>
           <a href="/content/synthetic" class="dropdown-toggle">
-            <i class="icon-unlink"></i>&nbsp;<%= i('common.sidebar.content.synthetic') %>
+            <i class="icon-unlink"></i>&nbsp;<%= i('html.label.sidebar.content.synthetic') %>
           </a>
         </li>
         <li>
           <a href="/content/layout" class="dropdown-toggle">
-            <i class="icon-th"></i>&nbsp;<%= i('common.sidebar.content.layout') %>
+            <i class="icon-th"></i>&nbsp;<%= i('html.label.sidebar.content.layout') %>
           </a>
           <ul class="submenu" style="display: block;">
             <li>
-              <a href="/content/layout/publish"><%= i('common.sidebar.content.layout.publish') %></a>
+              <a href="/content/layout/publish"><%= i('html.label.sidebar.content.layout.publish') %></a>
             </li>
             <li>
-              <a href="/content/layout/apply"><%= i('common.sidebar.content.layout.apply') %></a>
+              <a href="/content/layout/apply"><%= i('html.label.sidebar.content.layout.apply') %></a>
             </li>
             <% if (user.authority && user.authority.approve ==1) {%>
             <li>
-              <a href="/content/layout/confirm"><%= i('common.sidebar.content.layout.confirm') %></a>
+              <a href="/content/layout/confirm"><%= i('html.label.sidebar.content.layout.confirm') %></a>
             </li>
             <% }%>
           </ul>
@@ -38,48 +38,60 @@
     </li>
     <li>
       <a href="#" class="dropdown-toggle">
-        <span class="menu-text"><%= i('common.sidebar.personal.setup') %></span>
+        <span class="menu-text"><%= i('html.label.sidebar.personal.setup') %></span>
       </a>
       <ul class="submenu" style="display: block;">
         <li>
           <a href="/customer/group" class="dropdown-toggle">
-            <i class="icon-group"></i>&nbsp;<%= i('common.sidebar.personal.setup.group') %>
+            <i class="icon-group"></i>&nbsp;<%= i('html.label.sidebar.personal.setup.group') %>
           </a>
         </li>
         <% if (user.authority && user.authority.notice ==1) {%>
         <li>
           <a href="/customer/notice" class="dropdown-toggle">
-            <i class="icon-bullhorn"></i>&nbsp;<%= i('common.sidebar.personal.setup.notice') %>
+            <i class="icon-bullhorn"></i>&nbsp;<%= i('html.label.sidebar.personal.setup.notice') %>
           </a>
         </li>
         <% }%>
+      </ul>
+    </li>
+    <% }%>
+    <li>
+      <a href="#" class="dropdown-toggle">
+        <span class="menu-text"><%= i('html.label.sidebar.appset') %></span>
+      </a>
+      <ul class="submenu" style="display: block;">
+        <li>
+          <a href="/customer/appimage" class="dropdown-toggle">
+            <i class="icon-tablet "></i>&nbsp;<%= i('html.label.sidebar.appset.icon') %>
+          </a>
+        </li>
         <li>
           <a href="/customer/workstation" class="dropdown-toggle">
-            <i class="icon-th-list"></i>&nbsp;<%= i('common.sidebar.personal.setup.workstation') %>
+            <i class="icon-th-list"></i>&nbsp;<%= i('html.label.sidebar.appset.workstation') %>
           </a>
         </li>
       </ul>
     </li>
-    <% }%>
     <% if (user.type == 3 || user.type == 1) {%>
     <li>
       <a href="/customer/user" class="dropdown-toggle">
-        <span class="menu-text"><%= i('common.sidebar.system') %></span>
+        <span class="menu-text"><%= i('html.label.sidebar.system') %></span>
       </a>
       <ul class="submenu" style="display: block;">
         <li>
           <a href="/customer/user" class="dropdown-toggle">
-            <i class="icon-male"></i>&nbsp;<%= i('common.sidebar.system.user') %>
+            <i class="icon-male"></i>&nbsp;<%= i('html.label.sidebar.system.user') %>
           </a>
           <ul class="submenu" style="display: block;">
             <li>
-              <a href="/customer/user/import"><%= i('common.sidebar.system.user.import') %></a>
+              <a href="/customer/user/import"><%= i('html.label.sidebar.system.user.import') %></a>
             </li>
           </ul>
         </li>
         <li>
           <a href="/customer/device" class="dropdown-toggle">
-            <i class="icon-tablet"></i>&nbsp;<%= i('common.sidebar.system.device') %>
+            <i class="icon-tablet"></i>&nbsp;<%= i('html.label.sidebar.system.device') %>
           </a>
         </li>
         <!--
@@ -96,12 +108,12 @@
     <% if (user.type == 3 || user.type == 2) {%>
     <li>
       <a href="/admin/company" class="dropdown-toggle">
-        <span class="menu-text"><%= i('common.sidebar.company.manager') %></span>
+        <span class="menu-text"><%= i('html.label.sidebar.company.manager') %></span>
       </a>
       <ul class="submenu" style="display: block;">
         <li>
           <a href="/admin/company" class="dropdown-toggle">
-            <i class="icon-briefcase"></i>&nbsp;<%= i('common.sidebar.company.manager.customer') %>
+            <i class="icon-briefcase"></i>&nbsp;<%= i('html.label.sidebar.company.manager.customer') %>
           </a>
         </li>
         <!--
