--- a/views/customer_user_list.html
+++ b/views/customer_user_list.html
@@ -49,7 +49,7 @@
       </div>
       <div class="row">
         <div class="col-lg-12">
-        <table class="table table-hover">
+        <table class="table table-hover" style="word-break:break-all;word-wrap:break-word">
           <thead>
           <tr>
             <th>#</th>
