横屏空白区域调整

--- a/views/customer_user_update.html
+++ b/views/customer_user_update.html
@@ -86,7 +86,7 @@
             <div class="col-lg-3">
               <div class="btn-group" value="GMT+08:00" id="inputTimezone">
                 <button type="button" class="btn btn-sm btn-default" value="GMT+09:00">日本(GMT+09)</button>
-                <button type="button" class="btn btn-sm btn-default" value="GMT+05:00">東部(GMT-05)</button>
+                <button type="button" class="btn btn-sm btn-default" value="GMT-05:00">東部(GMT-05)</button>
                 <button type="button" class="btn btn-sm btn-info" value="GMT+08:00">中国(GMT+08)</button>
               </div>
             </div>
