数据检索功能完善+layoutPreview边框

--- a/views/admin_company_list.html
+++ b/views/admin_company_list.html
@@ -40,7 +40,7 @@
         <div class="pull-right" style="width: 300px">
           <form class="search-form" onsubmit="return false;">
             <div class="input-group">
-              <input id = "company_search" type="text" placeholder="<%= i('html.label.common.search') %>" class="form-control"  autocomplete="off" />
+              <input id = "company_search" type="text" placeholder="<%= i('html.label.common.search')%> ( <%= i('html.label.company.name') %>)" class="form-control"  autocomplete="off" />
               <span class="input-group-addon">
                 <i id = "doSearchCompany"class="icon-search"></i>
               </span>
