--- a/views/content_synthetic.html
+++ b/views/content_synthetic.html
@@ -41,7 +41,7 @@
         <div class="pull-right" style="width: 300px">
           <form class="search-form" onsubmit="return false">
             <div class="input-group">
-              <input id="txt_search" type="text" placeholder="<%= i('html.label.common.search') %>" class="form-control"  autocomplete="off" />
+              <input id="txt_search" type="text" placeholder="<%= i('html.label.common.search') %>(<%= i('html.label.synthetic.title') %>)" class="form-control"  autocomplete="off" />
                 <span id="doSearch" class="input-group-addon">
                   <i class="icon-search"></i>
                 </span>
