--- a/views/customer_user_list.html
+++ b/views/customer_user_list.html
@@ -39,7 +39,7 @@
         <div class="pull-right" style="width: 300px">
           <form class="search-form" onsubmit="return false;">
             <div class="input-group">
-              <input id = "user_search" type="text" placeholder="<%= i('html.label.common.search') %>" class="form-control"  autocomplete="off" />
+              <input id = "user_search" type="text" placeholder="<%= i('html.label.common.search') %>(<%= i('html.label.user.name') %>)" class="form-control"  autocomplete="off" />
               <span id="doSearchUser" class="input-group-addon">
                 <i class="icon-search"></i>
               </span>
