--- a/views/common/navbar.html
+++ b/views/common/navbar.html
@@ -14,7 +14,7 @@
       <ul class="nav pull-right userinfo">
         <li>
           <a data-toggle="dropdown" href="#" class="dropdown-toggle">
-            <img width="23" height="23" src="/images/original.png"/>
+            <img width="23" height="23" src="/images/ico_144px.png"/>
             <span><%= user.name.name_zh %></span>
             <i class="icon-chevron-down"></i>
           </a>
