--- a/views/customer_notice_add.html
+++ b/views/customer_notice_add.html
@@ -38,7 +38,7 @@
           <h4><%= i('html.label.notice') %><!-- 通知--></h4>
         </div>
       </div>
-      <div class="row col-lg-8" style="border:solid 1px #e3e3e3;margin-bottom: 30px">
+      <div class="row col-lg-8 box-border">
         <form class="form-horizontal" role="form" style="margin-top: 15px">
           <div class="form-group">
             <label for="title" class="col-lg-2 control-label"><%= i('html.label.notice.title') %><!-- タイトル--></label>
@@ -64,7 +64,7 @@
           </div>
         </form>
       </div>
-      <div class="col-lg-8" style="margin-bottom: 30px">
+      <div class="col-lg-8" style="margin-bottom: 30px;padding: 0px;">
         <div id="addNotice" class="col-lg-4 btn btn-warning btn-lg">
           <%= i('html.button.notice.send') %><!-- 発送-->
         </div>
