--- a/views/content_layout_add.html
+++ b/views/content_layout_add.html
@@ -98,7 +98,7 @@
       width: 100%;
       overflow-x: auto;
       overflow-y: hidden;
-      height: 104px;
+      height: 98px;
       white-space: nowrap
 
     }
@@ -124,17 +124,26 @@
     .carousel-control.right {
       right: 0;
       left: auto;
-      background-image: -webkit-gradient(linear, 0 top, 100% top, from(rgba(0, 0, 0, 0.0001)), to(rgba(251, 251, 251, 0.49)));
-      background-image: -webkit-linear-gradient(left, color-stop(rgba(0, 0, 0, 0.0001) 0), color-stop(rgba(251, 251, 251, 0.49) 100%));
-      background-image: -moz-linear-gradient(left, rgba(0, 0, 0, 0.0001) 0, rgba(0, 0, 0, 0.5) 100%);
-      background-image: linear-gradient(to right, rgba(0, 0, 0, 0.0001) 0, rgba(0, 0, 0, 0.5) 100%);
+      background-image: none;
+      background-image: none;
+      background-image: none;
+      background-image: none;
       background-repeat: repeat-x;
       filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#00000000', endColorstr='#80000000', GradientType=1);
+    }
+    .carousel-control.left {
+      background-image: none;
+      background-image: none;
+      background-image: none;
+      background-image: none;
+      background-repeat: repeat-x;
+      filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#80000000', endColorstr='#00000000', GradientType=1);
     }
     .ace-thumbnails {
       list-style: none;
       margin: 0;
-      padding: 0
+      padding: 0;
+
     }
 
     .ace-thumbnails>li {
@@ -295,7 +304,7 @@
           <h4><%= i('html.label.layout.info') %><!-- 情報入力--></h4>
         </div>
       </div>
-      <div class="row col-lg-8" style="border:solid 1px #e3e3e3;margin-bottom: 30px">
+      <div class="row col-lg-8" style="border:solid 0px #e3e3e3;margin-bottom: 30px">
         <form class="form-horizontal" role="form">
           <div class="form-group" style="margin-top: 15px">
             <label for="layoutName" class="control-label col-lg-2"><%= i('html.label.layout.info.title') %><!-- タイトル--></label>
@@ -314,7 +323,7 @@
           </div>
         </form>
       </div>
-      <div class="row col-lg-8 tableheader" style="border:solid 1px #e3e3e3;">
+      <div class="row col-lg-8 tableheader" style="margin-top: 30px">
         <div class="pull-left">
           <h4><%= i('html.label.layout.x') %><!-- 横--></h4>
         </div>
@@ -323,7 +332,7 @@
           <a data-toggle="modal"  href="#" class="btn btn-default" id="addLayoutScreen"><i class="icon-plus">&nbsp;</i><%= i('html.button.layout.screenadd') %><!-- 追加スクリーン--></a>
         </div>
       </div>
-      <div class="row col-lg-8" style="border: 1px solid #dddddd;">
+      <div class="row col-lg-8" style="border: 0px solid #dddddd;">
         <div style="width:665px;height:478px;margin-left: 200px;margin-top: 30px;margin-bottom: 30px">
           <div style="border:1px solid #000000;padding:50px 5px 50px 50px;border-radius: 15px;">
             <div class="row">
@@ -338,7 +347,7 @@
           </div>
         </div>
       </div>
-      <div class="row col-lg-8 tableheader" style="border:solid 1px #e3e3e3;margin-top: 30px">
+      <div class="row col-lg-8 tableheader" style="margin-top: 30px">
         <div class="pull-left">
           <h4><%= i('html.label.layout.y') %><!-- 縦--></h4>
         </div>
@@ -347,44 +356,39 @@
           <a data-toggle="modal"  href="#" class="btn btn-default" id="addCaseMenu"><i class="icon-plus">&nbsp;</i><%= i('html.button.layout.casemenu') %><!-- 追加ケースメーニュー--></a>
         </div>
       </div>
-      <div class="row col-lg-8" style="border:solid 1px #e3e3e3;margin-bottom:30px">
-        <div class="row col-lg-8">
-            <div class="caseview_panel" style="margin-left: -15px">
-                <div class="carousel slide">
-                  <div class="carousel-inner ">
-                    <div class="item active">
-                      <div id="caseMenuScrollDiv" offset="0" style="height: 104px; white-space: nowrap; overflow-x: scroll;">
-                        <ul id="caseMenuPanel" class="ace-thumbnails"></ul>
-                        <!--<a href="javascript:void(0);">-->
-                      <!--<img class="caseMenuImg" id="caseMenu_2" num="2" src="/picture/5212dc6c4dadf3535600003e">-->
-                        <!--</a>-->
-                        <!--<a href="javascript:void(0);">-->
-                      <!--<img class="caseMenuImg" id="caseMenu_2" num="2" src="/picture/5212dc6c4dadf3535600003e">-->
-                        <!--</a>-->
-
-                      </div>
-                    </div>
-                  </div>
-                  <a class="left carousel-control" href="#carousel-example-generic" data-slide="prev"
-                     style="width: 30px; height: 94px; margin-bottom: 10px; top: inherit;">
-                    <span class="icon-prev"></span>
-                  </a>
-                  <a class="right carousel-control" href="#carousel-example-generic" data-slide="next"
-                     style="width: 30px; height: 94px; margin-bottom: 10px; top: inherit;">
-                    <span class="icon-next"></span>
-                  </a>
-                </div>
-                <div class="thumb" id="addCase">
-                  <img style="width: 94px;height: 94px;" data-toggle="modal" href="#pickImg"
-                                                   src="/images/block.png"></div>
-            </div>
-       </div>
+      <div class="row col-lg-8" style="border:solid 0px #e3e3e3;margin-bottom:30px">
         <div id="layoutPortrait" class="row col-lg-8">
           <div style="padding: 50px 5px 50px 50px;margin-left: 230px;">
-            <div style="border:1px solid #000000;padding:70px 50px 70px 70px;border-radius: 15px;width:520px;height:695px">
+            <div style="border:1px solid #000000;padding:70px 50px 70px 70px;border-radius: 15px;width:520px;height:670px">
               <div class="row">
-                <div class="" style="overflow-y:auto;width:376px;height:539px;border:1px solid #000000;">
-                  <img style="width:376px" id="caseView" src="">
+                <div class="" style="width:376px;height:520px;border:1px solid #000000;">
+                  <div>
+                    <div class="caseview_panel" style=" border-bottom: solid 1px #e3e3e3;">
+                      <div class="carousel slide">
+                        <div class="carousel-inner ">
+                          <div class="item active">
+                            <div id="caseMenuScrollDiv" offset="0" style="height: 104px; white-space: nowrap;">
+                              <ul id="caseMenuPanel" class="ace-thumbnails"></ul>
+                            </div>
+                          </div>
+                        </div>
+                        <a class="left carousel-control" href="#carousel-example-generic" data-slide="prev"
+                           style="width: 30px; height: 94px; margin-bottom: 10px; top: inherit;">
+                          <span class="icon-prev"></span>
+                        </a>
+                        <a class="right carousel-control" href="#carousel-example-generic" data-slide="next"
+                           style="width: 30px; height: 94px; margin-bottom: 10px; top: inherit;">
+                          <span class="icon-next"></span>
+                        </a>
+                      </div>
+                      <div class="thumb" id="addCase">
+                        <img style="width: 94px;height: 94px;" data-toggle="modal" href="#pickImg"
+                             src="/images/block.png"></div>
+                    </div>
+                  </div>
+                  <div class="row" style="overflow-y:auto;height:420px;">
+                    <img style="width:357px;" id="caseView" src="">
+                  </div>
                 </div>
                 <div class="circle" style="border:1px solid #000000;margin-top: 40px;margin-left: 180px">
                   <div class="square" style="border:1px solid #000000;margin-left: 8.5px;"></div>
@@ -394,9 +398,9 @@
           </div>
         </div>
       </div>
-      <div class="col-lg-8" style="margin-bottom: 30px">
+      <div class="col-lg-8" style="margin-bottom: 30px;padding: 0px;">
         <div id="saveLayout" name="saveLayout" class="col-lg-4 btn btn-warning btn-lg">
-          <a><%= i('html.button.common.save') %><!-- 保存--></a>
+          <%= i('html.button.common.save') %><!-- 保存-->
         </div>
       </div>
     </div>
