--- a/views/customer_user_update.html
+++ b/views/customer_user_update.html
@@ -34,46 +34,46 @@
     </div>
 
     <div class="page-content">
-      <div class="page-header position-relative">
-        <h1>
-          <%= i('html.label.user.basicinfo') %><!-- 基本情報-->
-        </h1>
+      <div class="row tableheader col-lg-8">
+        <div class="pull-left">
+          <h4><%= i('html.label.user.basicinfo') %><!-- 基本情報--></h4>
+        </div>
       </div>
-      <div>
+      <div class="row col-lg-8 box-border">
         <form class="form-horizontal" role="form">
           <div class="form-group">
             <label for="inputUserID" class="col-lg-2 control-label"><%= i('html.label.user.id') %><!-- ユーザID--></label>
-            <div class="col-lg-3">
+            <div class="col-lg-8">
               <input type="text" class="form-control" id="inputUserID" placeholder="<%= i('html.label.user.id') %>" maxlength="30">
             </div>
           </div>
           <div class="form-group">
             <label for="inputPassword" class="col-lg-2 control-label"><%= i('html.label.user.password') %><!-- パスワード--></label>
-            <div class="col-lg-3">
+            <div class="col-lg-8">
               <input type="password" class="form-control" id="inputPassword" placeholder="<%= i('html.label.user.password') %>" maxlength="20">
             </div>
           </div>
           <div class="form-group">
             <label for="inputName" class="col-lg-2 control-label"><%= i('html.label.user.name') %><!-- 名前--></label>
-            <div class="col-lg-3">
+            <div class="col-lg-8">
               <input type="text" class="form-control" id="inputName" placeholder="<%= i('html.label.user.name') %>" maxlength="20">
             </div>
           </div>
           <div class="form-group">
             <label for="inputRole" class="col-lg-2 control-label"><%= i('html.label.user.role') %><!-- 役職--></label>
-            <div class="col-lg-3">
+            <div class="col-lg-8">
               <input type="text" class="form-control" id="inputRole" placeholder="<%= i('html.label.user.role') %>" maxlength="20">
             </div>
           </div>
           <div class="form-group">
             <label for="inputPhone" class="col-lg-2 control-label"><%= i('html.label.user.tel') %><!-- 電話番号--></label>
-            <div class="col-lg-3">
+            <div class="col-lg-8">
               <input type="tel" class="form-control" id="inputPhone" placeholder="<%= i('html.label.user.tel') %>">
             </div>
           </div>
           <div class="form-group">
             <label for="inputLang" class="col-lg-2 control-label"><%= i('html.label.user.lang') %><!-- 言語--></label>
-            <div class="col-lg-3">
+            <div class="col-lg-8">
               <div class="btn-group" value="ja" id="inputLang">
                 <button type="button" class="btn btn-sm btn-info" value="ja">日本語</button>
                 <button type="button" class="btn btn-sm btn-default" value="en">English</button>
@@ -83,7 +83,7 @@
           </div>
           <div class="form-group">
             <label for="inputTimezone" class="col-lg-2 control-label"><%= i('html.label.user.timezone') %><!-- 时区--></label>
-            <div class="col-lg-3">
+            <div class="col-lg-8">
               <div class="btn-group" value="GMT+08:00" id="inputTimezone">
                 <button type="button" class="btn btn-sm btn-default" value="GMT+09:00">日本(GMT+09)</button>
                 <button type="button" class="btn btn-sm btn-default" value="GMT-05:00">東部(GMT-05)</button>
@@ -93,14 +93,14 @@
           </div>
           <div class="form-group">
             <label for="inputComment" class="col-lg-2 control-label"><%= i('html.label.user.comment') %><!-- コメント--></label>
-            <div class="col-lg-3">
+            <div class="col-lg-8">
               <textarea class="form-control" id="inputComment" placeholder="<%= i('html.label.user.comment') %>"></textarea>
             </div>
           </div>
           <% if (user.type == 3 || user.type == 1) {%>
           <div class="form-group">
             <label class="col-lg-2 control-label"><%= i('html.label.user.approved') %><!-- 承認者--></label>
-            <div class="col-lg-3">
+            <div class="col-lg-8">
               <!--<input type="checkbox" style="vertical-align: middle" id="inputApproved">-->
               <div class="btn-group" value="1" id="inputApproved">
                 <button type="button" class="btn btn-sm btn-info" value="1">ON</button>
@@ -110,7 +110,7 @@
           </div>
           <div class="form-group">
             <label class="col-lg-2 control-label"><%= i('html.label.user.notice') %><!-- 通知者--></label>
-            <div class="col-lg-3">
+            <div class="col-lg-8">
               <!--<input type="checkbox" style="vertical-align: middle" id="inputNotice">-->
               <div class="btn-group" value="1" id="inputNotice">
                 <button type="button" class="btn btn-sm btn-info" value="1">ON</button>
@@ -120,7 +120,7 @@
           </div>
           <div class="form-group">
             <label class="col-lg-2 control-label"><%= i('html.label.user.active') %><!-- 有効--></label>
-            <div class="col-lg-3">
+            <div class="col-lg-8">
               <!--<input type="checkbox" style="vertical-align: middle" id="inputActive">-->
               <div class="btn-group" value="1" id="inputActive">
                 <button type="button" class="btn btn-sm btn-info" value="1">ON</button>
@@ -129,12 +129,12 @@
             </div>
           </div>
           <% } %>
-          <div class="form-group">
-            <div class="col-lg-10 pull-right">
-              <button class="btn btn-warning btn-lg" id="updateUser"><%= i('html.button.common.add') %><!-- 登録--></button>
-            </div>
-          </div>
         </form>
+      </div>
+      <div class="col-lg-8" style="margin-bottom: 30px;padding: 0px;">
+        <div id="updateUser" class="col-lg-4 btn btn-warning btn-lg">
+          <%= i('html.button.common.add') %><!-- 登録-->
+        </div>
       </div>
     </div>
   </div>
