绿色系 修改

--- a/public/stylesheets/yukari.less
+++ b/public/stylesheets/yukari.less
@@ -359,7 +359,7 @@ textarea, input[type="text"], input[type="password"], input[type="datetime"], in
   background: #fff;
   margin: 0;
   padding: 30px 30px 30px 30px;
-  min-height: 900px;
+  min-height: 800px;
 }
 .page-content .nav-user-photo {
   margin: -4px 8px 0 0;
@@ -878,4 +878,14 @@ ol.popular-tags li a {
 .btn-default.disabled, .btn-default[disabled], fieldset[disabled] .btn-default, .btn-default.disabled:hover, .btn-default[disabled]:hover, fieldset[disabled] .btn-default:hover, .btn-default.disabled:focus, .btn-default[disabled]:focus, fieldset[disabled] .btn-default:focus, .btn-default.disabled:active, .btn-default[disabled]:active, fieldset[disabled] .btn-default:active, .btn-default.disabled.active, .btn-default[disabled].active, fieldset[disabled] .btn-default.active {
   background-color: #92d43e;
   border-color: #92d43e;
+}
+.btn-white {
+  color: #858585;
+  background-color: #fff;
+  border-color: #e3e3e3;
+}
+.btn-white:hover {
+  color: #858585;
+  background-color: #fff;
+  border-color: #e3e3e3;
 }
