--- a/public/stylesheets/yukari.css
+++ b/public/stylesheets/yukari.css
@@ -368,7 +368,7 @@ input[type="color"] {
   background: #fff;
   margin: 0;
   padding: 30px 30px 30px 30px;
-  min-height: 900px;
+  min-height: 800px;
 }
 .page-content .nav-user-photo {
   margin: -4px 8px 0 0;
@@ -877,4 +877,14 @@ fieldset[disabled] .btn-default:active,
 fieldset[disabled] .btn-default.active {
   background-color: #92d43e;
   border-color: #92d43e;
+}
+.btn-white {
+  color: #858585;
+  background-color: #fff;
+  border-color: #e3e3e3;
+}
+.btn-white:hover {
+  color: #858585;
+  background-color: #fff;
+  border-color: #e3e3e3;
 }
