横屏空白区域调整

--- a/public/stylesheets/contents.css
+++ b/public/stylesheets/contents.css
@@ -21,7 +21,7 @@
   float: left;
   height: 156px;
   width: 1000px;
-  overflow-x: scroll;
+  overflow-x: auto;
   overflow-y: hidden;
 }
 .thumb_block {
@@ -94,8 +94,6 @@
   display: block !important;
 }
 .material_cell {
-  overflow-x: scroll;
-  overflow-y: hidden;
   height: 156px;
   margin-left: 2px;
 }
