--- a/public/stylesheets/contents.less
+++ b/public/stylesheets/contents.less
@@ -26,7 +26,7 @@
   float: left;
   height: 156px;
   width: 1000px;
-  overflow-x: scroll;
+  overflow-x: auto;
   overflow-y: hidden;
 }
 
@@ -109,8 +109,8 @@
 }
 
 .material_cell {
-  overflow-x: scroll;
-  overflow-y: hidden;
+//  overflow-x: scroll;
+//  overflow-y: hidden;
   height: 156px;
   margin-left: 2px;
 }
