--- a/views/content_synthetic_add.html
+++ b/views/content_synthetic_add.html
@@ -94,7 +94,7 @@
           <div class="cover_thumb"><img src="/images/logo-block.png" style="opacity: 0.4;"></div>
         </div>
         <div class="pull-left col-lg-10">
-          <div class="coverpanel" id="cover_panel" style="margin-left:30px;display:none;overflow-x: scroll;overflow-y: hidden;">
+          <div class="coverpanel" id="cover_panel" style="margin-left:30px;display:none;overflow-x: auto;overflow-y: hidden;">
             <div class="cover_view">
             </div>
           </div>
